<resources>
    <string name="app_name">Milknote</string>
    <string name="pref_main_text">pref_main_text</string>
    <string name="appwidget_text">Widget</string>
    <string name="widget_layout_text">LaYOUT</string>
    <string name="add_widget">Add widget</string>
    <string name="title_activity_settings">Settings</string>
    <string name="default_note_folder">Main</string>
    <string name="default_note_display">Notes</string>
    <string name="trash_note_folder">trash</string>
    <string name="trash_note_display">Trash</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="no_records">"No notes. Click microphone to transcribe your first note."</string>

    <!--Button Labesl-->
    <string name="edit_button_label">Edit</string>
    <string name="trash_button_labal">Trash</string>
    <string name="delete_button_label">Delete</string>
    <string name="save_button_label">Save</string>
    <string name="share_button_label">Share</string>
    <string name="record_button_label">Record</string>
    <string name="restore_button_label">Restore</string>

    <!--Dialog Labesl-->
    <string name="empty_dialog_title">Empty Trash</string>
    <string name="empty_dialog_message">Are you sure you want to delete all records in trash permanently?</string>
    <string name="recorder_dialog_title">Recording note....</string>
    <string name="recorder_dialog_done">DONE</string>

    <!-- Snackbar messages -->
    <string name="trash_notification">Moved to Trash</string>
    <string name="trash_restored">Note is restored</string>
    <string name="trash_deleted">"records deleted"</string>

    <string name="content_authority">com.knewto.milknote.app</string>

    <!-- Preferences -->
    <string name="pref_result_title">Result</string>
    <string name="pref_result_key">pref_result</string>
    <string name="pref_result_summary">Output of Nuance Speech to Text</string>

    <string name="pref_notification_title">Notifications</string>
    <string name="pref_notification_key">pref_notifications</string>
    <string name="pref_notification_default">true</string>
    <string name="pref_notification_summary">Create quick note notification upon app start</string>

    <string name="pref_location_title">Store Location</string>
    <string name="pref_location_key">pref_store_location</string>
    <string name="pref_location_default">true</string>
    <string name="pref_location_summary">Store location where note was taken</string>

    <string name="pref_GPS_title">GPS</string>
    <string name="pref_GPS_key">pref_use_gps</string>
    <string name="pref_GPS_default">true</string>
    <string name="pref_GPS_summary">Use GPS to determine location</string>


    <!-- All of the possible tile background colors -->
    <array name="letter_tile_colors">
        <item>#f16364</item>
        <item>#f58559</item>
        <item>#f9a43e</item>
        <item>#e4c62e</item>
        <item>#67bf74</item>
        <item>#59a2be</item>
        <item>#2093cd</item>
        <item>#ad62a7</item>
    </array>


    <!-- Nav Drawer -->
    <string-array name="navOptions">
        <item>Notes</item>
        <item>Trash</item>
        <item>Settings</item>
    </string-array>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>


    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
