<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_edit"
        android:icon="@drawable/ic_create_white_48dp"
        android:title="@string/edit_button_label"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_trash"
        android:icon="@drawable/ic_delete_white_48dp"
        android:title="@string/trash_button_labal"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_item_share"
        android:icon="@drawable/ic_share_white_48dp"
        android:title="@string/share_button_label"
        app:showAsAction="ifRoom"
        app:actionProviderClass="android.support.v7.widget.ShareActionProvider"/>

</menu>

